--- a/buzz_lc.Rmd
+++ b/buzz_lc.Rmd
@@ -2,7 +2,8 @@
 title: "Buzz Loot History"
 author: "Kevin Magnan"
 date: "Code Updated 1/17/2022"
-output: html_document
+output: 
+  html_document: default
 ---
 <style type="text/css">
 .main-container {
@@ -13,22 +14,23 @@ output: html_document
 </style>
 
 
-```{r setup, include=FALSE}
+```{r setup and libraries, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 pacman::p_load(
   jsonlite,
   data.table,
   DT,
   tidyverse,
+  lubridate,
   tidyr,
   janitor,
-  purrr
+  purrr,
+  sunburstR,
+  d3r
 )
 ```
 
-## ThatsMyBiS Loot Received
-
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
+```{r Load Data, echo=FALSE, warning=FALSE, message=FALSE}
 ## load json file
 buzz_raw <- data.table(fromJSON("~/GitHub/kjmagnan1s.github.io/Buzz_ThatsMyBiS/buzz_character-json.json", flatten = TRUE))
 
@@ -36,16 +38,120 @@ buzz_raw <- data.table(fromJSON("~/GitHub/kjmagnan1s.github.io/Buzz_ThatsMyBiS/b
 buzz_master <- data.table(fromJSON("~/GitHub/kjmagnan1s.github.io/Buzz_ThatsMyBiS/buzz_character-json.json")) %>% select(1, 2, 3, 4, 7, 8, 9, 10, 11)
 
 ## unpack dataframes within raw json and limit columns
-buzz_received <- buzz_raw %>%  unnest(received, names_repair = "unique") %>% select(1,4,39,43,60,63) %>% rename(id = id...1, char_name = name...4, item_name = name...43, offspec_yn = pivot.is_offspec, date_received = pivot.received_at) %>% 
+buzz_received <- buzz_raw %>%  unnest(received, names_repair = "unique") %>% select(1,4,38,39,43,60,63) %>% rename(uuid = id...38,id = id...1, char_name = name...4, item_name = name...43, offspec_yn = pivot.is_offspec, date_received = pivot.received_at) %>% 
  mutate(wowhead_link = paste0("<a href=",'"https://tbc.wowhead.com/item=',item_id,'">Link</a>'))
 
 ## join received and wishlisted items to master list
-buzz_master_received <- left_join(buzz_master, buzz_received, by = "id") %>%  unite('spec', spec:spec_label, sep = ' | ', remove = FALSE) %>%  select(name, class, archetype, spec, item_id, item_name, offspec_yn, wowhead_link, date_received) %>% 
-  mutate(across(c(name, class, archetype, spec, item_name, offspec_yn), factor)) %>% mutate(offspec_yn = ifelse(offspec_yn == 1, "Y", "N")) %>% rename(Name = name, Class = class, Role = archetype, Spec = spec, 'Item ID' = item_id, 
-                                                                                                                                                       'Item Name' = item_name, 'Offspec (Y/N)' = offspec_yn, WoWHead = wowhead_link,
-                                                                                                                                                       'Date Received' = date_received)
+buzz_master_received <- left_join(buzz_master, buzz_received, by = "id") %>%  unite('spec', spec:spec_label, sep = ' | ', remove = FALSE) %>%  select(uuid, name, class, archetype, spec, item_id, item_name, offspec_yn, wowhead_link, date_received) %>% 
+  mutate(across(c(name, class, archetype, spec, item_name, offspec_yn), factor)) %>% 
+  mutate(offspec_yn = ifelse(offspec_yn == 1, "Y", "N")) %>%
+  rename(Name = name, Class = class, Role = archetype, Spec = spec, 'Item ID' = item_id, 'Item Name' = item_name, 'Offspec (Y/N)' = offspec_yn, WoWHead = wowhead_link, 'Date Received' = date_received)
 
-datatable(buzz_master_received, class = 'display cell-border stripe hover row-border', filter = 'top', extensions = c('ColReorder', 'Scroller', 'Select', 'SearchPanes'), selection = 'none', escape = FALSE,
+buzz_received_table <- buzz_master_received %>% select(!c(uuid, `Item ID`))
+```
+
+```{r GitHub Calendar, echo=FALSE, warning=FALSE, message=FALSE, fig.width=12, fig.height=6}
+
+## Fun idea to recreate the GitHub calendar heatmap. Doesn't work very well since loot gets recorded in a lag.
+
+# by_day <- buzz_master_received %>% 
+#   mutate(
+#     `Date Received` = as_datetime(`Date Received`, ),
+#     created_date = floor_date(`Date Received`, "day"),
+#     week_day = wday(`Date Received`)
+#   ) %>% 
+#   select(`Date Received`, week_day) %>% 
+#   na.omit() %>% 
+#   mutate(
+#     week_day = factor(week_day, levels = 1:7, labels = c(
+#       "Sun", "Mon", "Tues", "Wed", "Thurs", "Fri", "Sat"
+#     )),
+#     week = floor_date(`Date Received`, "week"),
+#     week = as_date(week),
+#     month = floor_date(`Date Received`, "month"),
+#     month = as_date(month)
+#   ) %>% 
+#   group_by(week, week_day, month) %>% 
+#   count(name = "count")
+# 
+# months <- seq(min(by_day$month), max(by_day$month), by = "month")
+# months_label <- strftime(months, "%b")
+# 
+# less <- grid::textGrob("Less", gp = grid::gpar(fontsize = 10, col = "#767676"))
+# more <- grid::textGrob("More", gp = grid::gpar(fontsize = 10, col = "#767676"))
+# 
+# by_day %>% ggplot() +
+#       aes(week, fct_rev(week_day), fill = count) +
+#       geom_tile(width = 0.90 * 7, height = 0.90) +
+#       coord_fixed(7) +
+#       theme_minimal(18, base_family = "PT Sans") +
+#       labs(x = NULL, y = NULL) +
+#       scale_x_date(expand = c(0, 0), breaks = months, labels = months_label) +
+#       ggsci::scale_fill_material("deep-orange") +
+#       theme(
+#         legend.position = "bottom",
+#         panel.grid = element_blank(),
+#         axis.ticks.y = element_blank(),
+#         axis.text.x = element_text(hjust = 0.5),
+#         plot.margin = margin(1.5, 0, 1.5, 0)
+#       )
+```
+
+```{r Box and Whisker, echo=FALSE, warning=FALSE, message=FALSE, fig.width=12, fig.height=6}
+# 
+# by_class_spec <- buzz_master_received %>% filter(`Offspec (Y/N)` == "N") %>% 
+#   group_by(Class, Role, Spec) %>%
+#   count(name = "count") 
+# 
+# knitr::kable(by_class_spec)
+# 
+# tree <- d3_nest(by_class_spec, value_cols = "count")
+# tree
+# 
+# sb1 <- sunburst(tree,
+#          width = "100%",
+#          height = 400)
+# 
+# sb1
+# 
+# sb2 <- sund2b(tree)
+# 
+# sb2
+# 
+# dat <- data.frame(
+#   level1 = rep(c("a", "b"), each=3),
+#   level2 = paste0(rep(c("a", "b"), each=3), 1:3),
+#   size = c(10,5,2,3,8,6),
+#   stringsAsFactors = FALSE
+# )
+# 
+# knitr::kable(dat)
+# 
+# test <- d3_nest(dat, value_cols = "size")
+# test
+# 
+# sbtest <- sunburst(tree, width="100%", height=400)
+# sbtest
+# plot_ly(data = by_class_spec, y = ~uuid, x = ~Class, color = ~Role, type = "box", boxpoints = "all", jitter = 0)
+
+# by_class_spec %>%ggplot(
+#   aes(x = Class, y = count, fill = factor(Role))) +
+#     geom_dotplot(method = "histodot", binwidth = 0.12, dotsize = 1.25) +
+#   scale_y_continuous(NULL, breaks = NULL)
+```
+
+## ThatsMyBiS Loot Received
+
+```{r Received Table, echo=FALSE, warning=FALSE, message=FALSE}
+
+## Analytics:
+
+## GitHub style calendar heat map of loot
+
+## RShiny(?) dashboard or analytics looking at class/spec loot distrubution. Would be nice to include toggle buttons for MS>OS
+## A box and whisker interactive viz for loot for each class with different specs colored/symbols is a good one
+
+datatable(buzz_received_table, class = 'display cell-border stripe hover row-border', filter = 'top', extensions = c('ColReorder', 'Scroller', 'Select', 'SearchPanes'), selection = 'none', escape = FALSE,
           options = list(pageLength = 40, order = list(8, 'desc'), colReorder = TRUE,
                          deferRender = TRUE, scrollY = 500, scroller = TRUE), 
                                            rownames = FALSE,
@@ -54,16 +160,16 @@ datatable(buzz_master_received, class = 'display cell-border stripe hover row-bo
 
 ## ThatsMyBiS Active Wishlist
 
-```{r, echo=FALSE, warning=FALSE, message=FALSE}
-buzz_wishlist <- buzz_raw %>%  unnest(wishlist, names_repair = "unique") %>% select(1,4,42,46,62, 65,71,18) %>% rename(id = id...1, char_name = name...4, item_name = name...46, 'Item Order' = pivot.order,received_yn = pivot.is_received, last_updated = pivot.updated_at) %>% 
+```{r Wishlist Table, echo=FALSE, warning=FALSE, message=FALSE}
+buzz_wishlist <- buzz_raw %>%  unnest(wishlist, names_repair = "unique") %>% select(1,4,42,46,62,65,71,67) %>% rename(id = id...1, char_name = name...4, item_name = name...46, 'Item Order' = pivot.order,received_yn = pivot.is_received, last_updated = pivot.updated_at) %>% 
   mutate(wowhead_link = paste0("<a href=",'"https://tbc.wowhead.com/item=',item_id,'">Link</a>'))
 
-buzz_master_wishlist <- left_join(buzz_master, buzz_wishlist, by = "id") %>%  unite('spec', spec:spec_label, sep = ' | ', remove = FALSE) %>% select(name, class, archetype, spec, item_id, item_name, 'Item Order', received_yn, wowhead_link, last_updated, public_note) %>% mutate(across(c(name, class, archetype, spec, item_name, received_yn), factor)) %>% mutate(received_yn = ifelse(received_yn == 1, "Y", "N")) %>% rename(Name = name, Class = class, Role = archetype, Spec = spec, 'Item ID' = item_id, 
-                                                                                                                                                       'Item Name' = item_name, 'Received (Y/N)' = received_yn, WoWHead = wowhead_link,
-                                                                                                                                                       'Last Updated' = last_updated, 'Note' = public_note)
+buzz_master_wishlist <- left_join(buzz_master, buzz_wishlist, by = "id") %>%  unite('spec', spec:spec_label, sep = ' | ', remove = FALSE) %>% select(name, class, archetype, spec, item_id, item_name, 'Item Order', received_yn, wowhead_link, last_updated, pivot.note) %>% mutate(across(c(name, class, archetype, spec, item_name, received_yn), factor)) %>% mutate(received_yn = ifelse(received_yn == 1, "Y", "N")) %>% rename(Name = name, Class = class, Role = archetype, Spec = spec, 'Item ID' = item_id, 'Item Name' = item_name, 'Received (Y/N)' = received_yn, WoWHead = wowhead_link, 'Last Updated' = last_updated, 'Note' = pivot.note)
 
-datatable(buzz_master_wishlist, class = 'display cell-border stripe hover row-border', filter = 'top', extensions = c('ColReorder', 'Scroller'), escape = FALSE,
-          options = list(pageLength = 25, order = list(9, 'desc'), colReorder = TRUE,
+buzz_wishlist_table <- buzz_master_wishlist %>%  select(!c(`Item ID`, `Item Order`))
+
+datatable(buzz_wishlist_table, class = 'display cell-border stripe hover row-border', filter = 'top', extensions = c('ColReorder', 'Scroller'), escape = FALSE,
+          options = list(pageLength = 25, order = list(7, 'desc'), colReorder = TRUE,
                          deferRender = TRUE, scrollY = 500, scroller = TRUE), rownames = FALSE,
           caption = "Export of Giant JSON blob on ThatsMyBiS. All BUZZ guilds characters with their wish list prio.")
 
@@ -83,4 +189,6 @@ datatable(buzz_master_wishlist, class = 'display cell-border stripe hover row-bo
 #   extensions = c('Select', 'SearchPanes'),
 #   selection = 'none'
 # )
+
+## Create a Item wishlist table with players who wishlisted. Swap the group_by from Player > item to Item > player > priority.
 ```
